--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -16,7 +16,7 @@
         <a class="nav-link"  routerLink="/books" *ngIf="_auth.loggedIn()" routerLinkActive="active">Book List</a>
         <a class="nav-link"  routerLink="/login" *ngIf="!_auth.loggedIn()" routerLinkActive="active">Admin Login</a>
         <a class="nav-link"  routerLink="/userlogin" *ngIf="!_auth.loggedIn()" routerLinkActive="active">User Login</a>
-        <a class="nav-link"  routerLink="/userregister" *ngIf="!_auth.loggedIn()" routerLinkActive="active">User Register</a>
+        <a class="nav-link"  routerLink="/userregister" *ngIf="!_auth.loggedIn()" routerLinkActive="active">User SignUp</a>
         <a class="nav-link" style="cursor:pointer" *ngIf="_auth.loggedIn()" (click)="loggedUser()">Add Book</a>
         <a class="nav-link" style="cursor:pointer" *ngIf="_auth.loggedIn()" (click)="logoutUser()">Admin Logout</a>
         <a class="nav-link" style="cursor:pointer" *ngIf="!_auth.loggedIn() && _auth.userloggedIn()" (click)="logoutUser()">User Logout</a>
